--- a/.github/workflows/CI_WEBSERVICES-TESTE.yml
+++ b/.github/workflows/CI_WEBSERVICES-TESTE.yml
@@ -15,14 +15,21 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-
+      
       - name: Cache dependências Maven
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
+      
+      - name: Cache SonarQube
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
 
       - name: Compilar e testar com Maven
         run: mvn clean test
@@ -43,3 +50,8 @@ jobs:
         with:
           name: jacoco-report
           path: target/site/jacoco
+
+      - name: Analise Sonar
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Mariohcb95_WebServices
