--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
-                <version>${sonar-maven-plugin.version}</version>
+                <version>3.9.1.2184</version>
             </plugin>
             <plugin>
             <groupId>org.jacoco</groupId>
